--- a/css/styles.css
+++ b/css/styles.css
@@ -213,6 +213,15 @@ h1 {
 	margin-bottom: 20px;
 	color: #000000;
 }
+
+h2 {
+	font-weight: 700;
+	font-size: 2.25rem;
+	line-height: 40px;
+	font-family: 'Roboto Condensed', sans-serif;
+	margin-bottom: 20px;
+	color: #000000;
+}
 .img{
 	width: 100%;
 
